# PngQuantizeTool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
static/: PngQuantizeTool.wasm  index.html
